# AutoMicro

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
config/: .gitignore  README.md
raw_app/: .gitignore  README.md
source_libs/Common/: CMakeLists.txt
source_libs/Common/Client/FileTransfer/: CMakeLists.txt  FileTransferClient.cc
source_libs/Common/File/: CMakeLists.txt  FileReaderIntoStream.h
source_libs/Common/File/Messages/: CMakeLists.txt  Messages.cc  Messages.h
source_libs/Common/File/SequentialOps/: CMakeLists.txt  SequentialFileReader.cc  SequentialFileReader.h  SequentialFileWriter.cc  SequentialFileWriter.h
source_libs/Common/File/tools/: CMakeLists.txt  sha256.h
source_libs/Common/File/utils/: CMakeLists.txt
source_libs/Common/Server/FileTransfer/: CMakeLists.txt  FileTransferServer.cc
source_libs/Common/include/: CommonUsing.h  Config.hh  Type.hh
source_libs/Common/libgen/: CMakeLists.txt  CommonTypes.grpc.pb.cc  CommonTypes.grpc.pb.h  CommonTypes.pb.cc  CommonTypes.pb.h  DesignObjects.grpc.pb.cc  DesignObjects.grpc.pb.h  DesignObjects.pb.cc  DesignObjects.pb.h  FileTransfer.grpc.pb.cc  FileTransfer.grpc.pb.h  FileTransfer.pb.cc  FileTransfer.pb.h  LaunchConfig.grpc.pb.cc  LaunchConfig.grpc.pb.h  LaunchConfig.pb.cc  LaunchConfig.pb.h  LibertyReader.grpc.pb.cc  LibertyReader.grpc.pb.h  LibertyReader.pb.cc  LibertyReader.pb.h  Mappers.grpc.pb.cc  Mappers.grpc.pb.h  Mappers.pb.cc  Mappers.pb.h  RcNet.grpc.pb.cc  RcNet.grpc.pb.h  RcNet.pb.cc  RcNet.pb.h  SdcConstrains.grpc.pb.cc  SdcConstrains.grpc.pb.h  SdcConstrains.pb.cc  SdcConstrains.pb.h  StaStructure.grpc.pb.cc  StaStructure.grpc.pb.h  StaStructure.pb.cc  StaStructure.pb.h  StatusManager.grpc.pb.cc  StatusManager.grpc.pb.h  StatusManager.pb.cc  (+5 more)
source_libs/Common/redis/: CMakeLists.txt  RedisTools.cc  RedisTools.h
source_libs/Common/tools/: barrier.h  lock.h  lrucache.h
source_libs/Common/utility/: CMakeLists.txt  EigenMatrixUtility.cc  EigenMatrixUtility.hh  Interpolation.cc  Interpolation.hh
